fixed gaps

--- a/src-ui/index.css
+++ b/src-ui/index.css
@@ -20,7 +20,7 @@
 
 body {
   display: grid;
-  grid-template-columns: 1fr 10fr;
+  grid-template-columns: auto 10fr;
   grid-template-rows: 1fr auto;
   grid-template-areas:
     'sidebar main'
